--- a/.github/workflows/run_flask_app.yaml
+++ b/.github/workflows/run_flask_app.yaml
@@ -30,4 +30,8 @@ jobs:
           run: |
             flask run --host=0.0.0.0 --port=5000 &
             sleep 10
+
+        - name: Test Flask app
+          run: |
+              curl --retry 10 --retry-delay 5 --retry-connrefused http://localhost:5000
         
