--- a/.github/workflows/docker-flask.yml
+++ b/.github/workflows/docker-flask.yml
@@ -13,6 +13,7 @@ jobs:
         - name: Checkout repository
           uses: actions/checkout@v2
 
+
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v1
         
@@ -23,6 +24,10 @@ jobs:
             key: ${{ runner.os }}-buildx-${{ github.sha }}
             restore-keys: |
               ${{ runner.os }}-buildx-
+                
+        - name: Check Flask app logs
+          run: |
+                docker logs flask-app
 
         - name: Build Docker image
           run:  |
@@ -40,4 +45,4 @@ jobs:
 
         - name: Test Flask app
           run: |
-            curl --retry 10 --retry-delay 5 --retry-connrefused http://localhost:5000
+            curl --retry 5 --retry-delay 5 --retry-connrefused http://localhost:5000
