--- a/.github/workflows/docker-flask.yml
+++ b/.github/workflows/docker-flask.yml
@@ -31,7 +31,7 @@ jobs:
 
         - name: Run Docker container
           run: |
-                docker run -d -p 5000:5000 --name flask-app flask-app:latest
+                docker run -d -p 5000:5000 --name flask-app flask-app:latest sh -c "mkdir -p /app/uploads && flask run --host=0.0.0.0"
 
         - name: List Docker containers
           run: |
@@ -49,4 +49,4 @@ jobs:
 
         - name: Test Flask app
           run: |
-            curl --retry 5 --retry-delay 5 --retry-connrefused http://localhost:5000
+            curl --retry 2 --retry-delay 5 --retry-connrefused http://localhost:5000
