--- a/.github/workflows/docker-flask.yml
+++ b/.github/workflows/docker-flask.yml
@@ -13,7 +13,6 @@ jobs:
         - name: Checkout repository
           uses: actions/checkout@v2
 
-
         - name: Set up Docker Buildx
           uses: docker/setup-buildx-action@v1
         
@@ -31,7 +30,7 @@ jobs:
 
         - name: Run Docker container
           run: |
-                docker run -d -p 5000:5000 --name flask-app flask-app:latest sh -c "mkdir -p /app/uploads && flask run --host=0.0.0.0"
+                docker run -d -p 5000:5000 --name flask-app flask-app:latest
 
         - name: List Docker containers
           run: |
