--- a/.github/workflows/run_flask_app.yaml
+++ b/.github/workflows/run_flask_app.yaml
@@ -29,6 +29,11 @@ jobs:
           run: |
                 source venv/bin/activate
                 flask --version
+        
+        - name: Log network configuration
+          run: |
+                  ip addr
+                  netstat -tuln
 
         - name: Run Flask app
           env:
@@ -40,6 +45,18 @@ jobs:
             sleep 30
             if [ -f flask.log ]; then cat flask.log; else echo "flask.log not found"; fi
             netstat -tuln
+
+        - name: Install ngrok
+          run: |
+              wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
+              unzip ngrok-stable-linux-amd64.zip
+              sudo mv ngrok /usr/local/bin
+      
+        - name: Run ngrok
+          run: |
+              ./ngrok http 5000 &
+              sleep 10
+              curl -s localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url'
 
         - name: Test Flask app
           run: |
