--- a/.github/workflows/run_flask_app.yaml
+++ b/.github/workflows/run_flask_app.yaml
@@ -51,6 +51,7 @@ jobs:
               wget https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip
               unzip ngrok-stable-linux-amd64.zip
               sudo mv ngrok /usr/local/bin
+              sudo chmod +x /usr/local/bin/ngrok
       
         - name: Run ngrok
           run: |
