--- a/.github/workflows/run_flask_app.yaml
+++ b/.github/workflows/run_flask_app.yaml
@@ -55,9 +55,10 @@ jobs:
       
         - name: Run ngrok
           run: |
-              ./ngrok http 5000 &
+              /usr/local/bin/ngrok http 5000 &
               sleep 10
               curl -s localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url'
+
 
         - name: Test Flask app
           run: |
