--- a/.github/workflows/run_flask_app.yaml
+++ b/.github/workflows/run_flask_app.yaml
@@ -43,7 +43,6 @@ jobs:
             source venv/bin/activate
             flask run --host=0.0.0.0 --port=5000 &
             sleep 30
-            if [ -f flask.log ]; then cat flask.log; else echo "flask.log not found"; fi
             netstat -tuln
 
         - name: Install ngrok
@@ -52,6 +51,12 @@ jobs:
               unzip ngrok-stable-linux-amd64.zip
               sudo mv ngrok /usr/local/bin
               sudo chmod +x /usr/local/bin/ngrok
+
+        - name: Configure ngrok with authtoken
+          env:
+                NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+          run: |
+                /usr/local/bin/ngrok config add-authtoken $NGROK_AUTH_TOKEN
       
         - name: Run ngrok
           run: |
@@ -63,4 +68,11 @@ jobs:
         - name: Test Flask app
           run: |
               curl --retry 10 --retry-delay 5 --retry-connrefused http://localhost:5000
+
+        - name: Upload logs
+          if: failure()
+          uses: actions/upload-artifact@v2
+          with:
+              name: flask-logs
+              path: flask.log
         
