--- a/.github/workflows/run_flask_app.yaml
+++ b/.github/workflows/run_flask_app.yaml
@@ -56,7 +56,7 @@ jobs:
           env:
                 NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
           run: |
-                /usr/local/bin/ngrok config add-authtoken $NGROK_AUTH_TOKEN
+                /usr/local/bin/ngrok authtoken $NGROK_AUTH_TOKEN
       
         - name: Run ngrok
           run: |
