--- a/.github/workflows/flask-ngrok.yaml
+++ b/.github/workflows/flask-ngrok.yaml
@@ -46,6 +46,39 @@ jobs:
         if [ -f flask.log ]; then cat flask.log; else echo "flask.log not found"; fi
         netstat -tuln
 
+    - name: Remove old ngrok
+      run: |
+        sudo rm -f /usr/local/bin/ngrok
+
+    - name: Check ngrok download URL
+      run: |
+        echo "Testing ngrok download URL"
+        wget -q --spider https://dl.ngrok.com/ngrok-v3-stable-linux-amd64.tgz || { echo 'ngrok URL not reachable'; exit 1; }
+
+    - name: Download ngrok
+      run: |
+        wget -q https://dl.ngrok.com/ngrok-v3-stable-linux-amd64.tgz -O ngrok.tgz || { echo 'ngrok download failed'; exit 1; }
+
+    - name: Extract and Install ngrok
+      run: |
+        sudo tar xvzf ngrok.tgz -C /usr/local/bin || { echo 'ngrok extraction failed'; exit 1; }
+        sudo chmod +x /usr/local/bin/ngrok
+
+    - name: Display ngrok version
+      run: /usr/local/bin/ngrok version
+
+    - name: Configure ngrok with authtoken
+      env:
+        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+      run: |
+        /usr/local/bin/ngrok authtoken $NGROK_AUTH_TOKEN
+
+    - name: Run ngrok
+      run: |
+        /usr/local/bin/ngrok http 5000 &
+        sleep 10
+        curl -s localhost:4040/api/tunnels | jq -r '.tunnels[0].public_url'
+
     - name: Test Flask app
       run: |
         curl --retry 10 --retry-delay 5 --retry-connrefused http://localhost:5000
