--- a/.github/workflows/docker-flask.yml
+++ b/.github/workflows/docker-flask.yml
@@ -1,45 +1,48 @@
 name: Run Flask App in Docker
 
 on:
-    push:
-      branches:
-        - main
+  push:
+    branches:
+      - main
 
 jobs:
   build-with-docker:
     runs-on: ubuntu-latest
 
     steps:
-        - name: Checkout repository
-          uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v1
-        
-        - name: Cache Docker layers
-          uses: actions/cache@v2
-          with:
-            path: /tmp/.buildx-cache
-            key: ${{ runner.os }}-buildx-${{ github.sha }}
-            restore-keys: |
-              ${{ runner.os }}-buildx-
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
 
-        - name: Build Docker image
-          run:  |
-            docker build -t flask-app:latest .
+      - name: Build Docker image
+        run: |
+          docker build -t flask-app:latest .
 
-        - name: Run Docker container
-          run: |
-                docker run -d -p 5000:5000 --name flask-app flask-app:latest
+      - name: Run Docker container
+        run: |
+          docker run -d -p 5000:5000 --name flask-app flask-app:latest
 
-        - name: List Docker containers
-          run: |
-                docker ps -a
-        
-        - name: Check Flask app logs
-          run: |
-                docker logs flask-app || echo "No logs available"
+      - name: Wait for Flask app to start
+        run: sleep 20
 
-        - name: Test Flask app
-          run: |
-            curl --retry 2 --retry-delay 5 --retry-connrefused http://localhost:5000
+      - name: List Docker containers
+        run: |
+          docker ps -a
+
+      - name: Check Flask app logs
+        run: |
+          docker logs flask-app
+
+      - name: Test Flask app
+        run: |
+          curl --retry 2 --retry-delay 5 --retry-connrefused http://localhost:5000
