--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,12 +41,15 @@ jobs:
           docker tag flask-app:${{ inputs.image-tag }} ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ inputs.image-tag }}
           docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ inputs.image-tag }}
 
+      - name: Generate Docker image metadata
+        run: ./generate-metadata.sh
+        env:
+            GITHUB_SHA: ${{ github.sha }}
+  
       - name: Upload Docker image metadata
         uses: actions/upload-artifact@v2
         with:
-          name: docker-image-metadata
-          path: ./docker-image-metadata.json
-        run: |
-          echo '{"image_tag": "${{ github.sha }}"}' > docker-image-metadata.json
+            name: docker-image-metadata
+            path: ./docker-image-metadata.json
 
 
