--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,14 +5,6 @@ on:
     branches:
       - main
 
-
-#on:
- # workflow_call:
-  #  inputs:
-   #   image-tag:
-    #    required: true
-     #   type: string
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -33,13 +25,13 @@ jobs:
             ${{ runner.os }}-buildx-
 
       - name: Build Docker image
-        run: docker build -t flask-app:${{ inputs.image-tag }} .
+        run: docker build -t flask-app:${{ github.sha }} .
 
       - name: Push Docker image
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker tag flask-app:${{ inputs.image-tag }} ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ inputs.image-tag }}
-          docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ inputs.image-tag }}
+          docker tag flask-app:${{ github.sha }} ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ github.sha }}
+          docker push ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:${{ github.sha }}
 
       - name: Generate Docker image metadata
         run: ./generate-metadata.sh
@@ -51,5 +43,3 @@ jobs:
         with:
             name: docker-image-metadata
             path: ./docker-image-metadata.json
-
-
