--- a/.github/workflows/deploy-gke.yml
+++ b/.github/workflows/deploy-gke.yml
@@ -14,17 +14,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - id: 'auth'
-        uses: 'google-github-actions/auth@v2'
-        with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
-
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
           export_default_credentials: true
+
+      - name: Install gke-gcloud-auth-plugin
+        run: |
+          sudo apt-get update && sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
 
       - name: Get the latest image digest
         id: image-digest
@@ -39,3 +38,7 @@ jobs:
       - name: Update deployment image
         run: |
           kubectl set image deployment/flask-app flask-app=ghcr.io/${{ github.repository }}@${{ steps.image-digest.outputs.digest }}
+
+      - name: Verify deployment rollout
+        run: |
+          kubectl rollout status deployment/flask-app
