--- a/.github/workflows/deploy-gke.yml
+++ b/.github/workflows/deploy-gke.yml
@@ -24,6 +24,10 @@ jobs:
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           export_default_credentials: true
+      
+      - name: Install gke-gcloud-auth-plugin
+        run: |
+            sudo apt-get update && sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
 
       - name: Get the latest image digest
         id: image-digest
