--- a/.github/workflows/deploy-gke.yml
+++ b/.github/workflows/deploy-gke.yml
@@ -38,10 +38,12 @@ jobs:
       - name: Get the latest image digest
         id: image-digest
         run: |
-          DIGEST=$(curl -s -H "Authorization: Bearer ${{ secrets.GHCR_PAT }}" "https://ghcr.io/v2/${{ github.repository }}/manifests/latest" | jq -r '.config.digest')
+          RESPONSE=$(curl -s -H "Authorization: Bearer <YOUR_TOKEN>" "https://ghcr.io/v2/iiakovleva-l/playground/manifests/latest")
+          echo "Response from GHCR: $RESPONSE"
+          DIGEST=$(echo "$RESPONSE" | jq -r '.config.digest')
           if [ "$DIGEST" == "null" ] || [ -z "$DIGEST" ]; then
-            echo "Failed to retrieve image digest"
-            exit 1
+          echo "Failed to retrieve image digest"
+          exit 1
           fi
           echo "Retrieved digest: ${DIGEST}"
           echo "digest=${DIGEST}" >> $GITHUB_ENV
