--- a/.github/workflows/deploy-gke.yml
+++ b/.github/workflows/deploy-gke.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Get the latest image digest
         id: image-digest
         run: |
-          RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.GHCR_PAT }}" "https://ghcr.io/v2/iiakovleva-l/playground/manifests/latest")
+          RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://ghcr.io/v2/iiakovleva-l/playground/manifests/latest")
           echo "Response from GHCR: $RESPONSE"
           DIGEST=$(echo "$RESPONSE" | jq -r '.config.digest')
           if [ "$DIGEST" == "null" ] || [ -z "$DIGEST" ]; then
