--- a/.github/workflows/deploy-gke.yml
+++ b/.github/workflows/deploy-gke.yml
@@ -51,7 +51,7 @@ jobs:
       - name: Get the latest image digest
         id: image-digest
         run: |
-          RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" "https://ghcr.io/v2/iiakovleva-l/playground/manifests/latest")
+          RESPONSE=$(curl -s -H "Authorization: Bearer ${{ GITHUB_TOKEN }}" "https://ghcr.io/v2/iiakovleva-l/playground/manifests/latest")
           echo "Response from GHCR: $RESPONSE"
           DIGEST=$(echo "$RESPONSE" | jq -r '.config.digest')
           if [ "$DIGEST" == "null" ] || [ -z "$DIGEST" ]; then
@@ -75,3 +75,4 @@ jobs:
       - name: Verify deployment rollout
         run: |
           kubectl rollout status deployment/flask-app
+          kubectl get services -o wide
