--- a/deployment.yaml
+++ b/deployment.yaml
@@ -12,6 +12,8 @@ spec:
       labels:
         app: flask-app
     spec:
+      imagePullSecrets:
+        - name: dockerconfigjson-github-com
       containers:
       - name: flask-app
         image: ghcr.io/iiakovleva-l/playground:latest
