--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -26,9 +26,9 @@ jobs:
 
       - name: Install SonarScanner
         run: |
-          wget -O sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-linux.zip
-          unzip sonar-scanner.zip -d $HOME/
-          export PATH="$HOME/sonar-scanner-4.7.0.2747-linux/bin:$PATH"
+          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.zip
+          unzip sonar-scanner-cli-4.8.0.2856-linux.zip
+          export PATH=$(pwd)/sonar-scanner-4.8.0.2856-linux/bin:$PATH
 
       - name: Run SonarQube Scan
         env:
