--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -18,6 +18,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+      
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'  # Install Temurin distribution of Java (AdoptOpenJDK)
+          java-version: '17'
+
 
       - name: Install Dependencies
         run: |
