--- a/.github/workflows/build-maven.yml
+++ b/.github/workflows/build-maven.yml
@@ -35,7 +35,7 @@ on:
 
 jobs:
     build-maven:
-        runs-on: ubuntu-lates
+        runs-on: ubuntu-latest
 
         steps:
             - name: CHeckout code
