--- a/.github/workflows/build-npm.yml
+++ b/.github/workflows/build-npm.yml
@@ -21,7 +21,7 @@ on:
       npm-test-options:
         required: false
         type: string
-        default: 'npm run test'
+        default: 'npm test'
         description: "additional npm test options"
 
 jobs:
