--- a/.github/workflows/build-npm.yml
+++ b/.github/workflows/build-npm.yml
@@ -27,6 +27,10 @@ on:
 jobs:
     build-npm:
         runs-on: ubuntu-latest
+        permissions:
+            contents: read
+            id-token: write
+            packages: write
 
         steps:
             - name: Checkout code
