change to write-all permissions

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -30,9 +30,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read 
+    permissions: write-all
 
     steps:
       - name: Checkout code
