fix runner typo

--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -10,7 +10,7 @@ on:
                 
 jobs:
     choose-build:
-        runs-on: ububntu-latest
+        runs-on: ubuntu-latest
 
         steps:
             - name: Choose build type
