--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -10,7 +10,6 @@ on:
       context:
         required: false
         type: string
-        default: '.'
         description: 'The build context for the Docker image'
       image_tags:
         required: true
@@ -46,12 +45,15 @@ jobs:
           registry: ${{ inputs.registry }}
           username: ${{ github.actor }}
           password: ${{ github.token }}
+          
+      - name: Change working directory to workspace
+        run: cd ${{ github.workspace }}
 
       - name: Build and push Docker image
         id: docker_build
         uses: docker/build-push-action@v5
         with:
-          context: ${{ inputs.context }}
+          context: ${{ github.workspace }}
           file: ${{ inputs.dockerfile }}
           push: ${{ inputs.push }}
           tags: ${{ inputs.image_tags}}
