--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -23,40 +23,42 @@ jobs:
                 echo "Build type is ${{ inputs.build-type }}"
                 if [ "${{ inputs.build-type }}" == "docker" ]; then
                     echo "Running Docker build"
-                    echo "build-type=docker" >> $GITHUB_OUTPUT
+                    echo "$build-type=docker" >> $GITHUB_ENV
                 elif [ "${{ inputs.build-type }}" == "maven" ]; then
                     echo "Running Maven build"
-                    echo "build-type=maven" >> $GITHUB_OUTPUT
+                    echo "$build-type=maven" >> $GITHUB_ENV
                 elif [ "${{ inputs.build-type }}" == "npm" ]; then
                     echo "Running NPM build"
-                    echo "build-type=npm" >> $GITHUB_OUTPUT
+                    echo "$build-type=npm" >> $GITHUB_ENV
                 else
                     echo "Unknown build type: ${{ inputs.build-type }}"
                     exit 1
                 fi
-            - name: List files in workspace
-              run: |
-                echo "Listing files in workspace:"
-                ls ${{ github.workspace }}
            
-            
-            - name: Run Docker build
-              if: ${{ inputs.build-type }} == 'docker'
-              uses: iiakovleva-l/ci-cd-workflows/.github/workflows/build-docker.yml@main
-              with:
-                dockerfile: ${{ github.workspace }}/Dockerfile
-                image_tags: ghcr.io/${{ github.repository }}:latest
-                registry: ghcr.io
-                push: true
+    docker-build-job:
+        runs-on: ubuntu-latest
+        if: ${{ inputs.build-type  == 'docker' }}
+        uses: iiakovleva-l/ci-cd-workflows/.github/workflows/build-docker.yml@main
+        with:
+          dockerfile: ${{ github.workspace }}/Dockerfile
+          image_tags: ghcr.io/${{ github.repository }}:latest
+          registry: ghcr.io
+          push: true
 
-            - name: Run Maven build
-              if: ${{ inputs.build-type }} == 'maven'
-              uses: ./.github/workflows/build-maven.yml
-              with:
-                java-version: '17'
-                maven-goals: 'clean package'
+    maven-build-job:
+        runs-on: ubuntu-latest
+        if: ${{ inputs.build-type == 'maven' }}
+        uses: iiakovleva-l/ci-cd-workflows/.github/workflows/build-maven.yml@main
+        with:
+          java-version: '17'
+          maven-goals: 'clean package'
 
-            - name: Run NPM build
-              if: ${{ inputs.build-type }} == 'npm'
-              uses: ./.github/workflows/build-npm.yml
+    npm-build-job:          
+        runs-on: ubuntu-latest
+        if: ${{ inputs.build-type  == 'npm' }}
+        uses: iiakovleva-l/ci-cd-workflows/.github/workflows/build-npm.yml@main
+        with:
+            node-version: '18'
+      
+    
 
